# data-storage-api

./: .gitignore  README.md  pyproject.toml
data_storage_api/apps/: http.py
data_storage_api/dataclasses/: __init__.py  object.py  repository.py
data_storage_api/db/: __init__.py  local.py
data_storage_api/routes/: __init__.py  base.py  repository.py
data_storage_api/utils/: __init__.py
tests/apps/: test_http.py
