[tool.poetry]
name = "data-storage-api"
version = "0.1.0"
description = "Small HTTP service to store objects organized by repository."
authors = ["Luis Esteban Rodriguez <rodriguezjluis0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.1.1"
flask-restful = "^0.3.9"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

